add addresses for joint applicant + add children with correct patter - add error for last declaration

--- a/app/views/forms/housing/CBL16.html
+++ b/app/views/forms/housing/CBL16.html
@@ -27,11 +27,13 @@
         items: [
           {
             value: "yes",
-            text: "Yes"
+            text: "Yes",
+            checked: checked("is-16", "yes")
           },
           {
             value: "no",
-            text: "No"
+            text: "No",
+            checked: checked("is-16", "no")
           }
         ]
       }) }}
