--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -34,11 +34,13 @@
             items: [
               {
                 value: "yes",
-                text: "Yes"
+                text: "Yes",
+                checked: checked ("living-alone", "yes")
               },
               {
                 value: "no",
-                text: "No"
+                text: "No",
+                checked: checked ("living-alone", "no")
               }
             ]
           }) }}
