--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -29,11 +29,13 @@
         items: [
           {
             value: "yes",
-            text: "Yes"
+            text: "Yes",
+            checked: checked ("other-children", "yes")
           },
           {
             value: "no",
-            text: "No"
+            text: "No",
+            checked: checked ("other-children", "no")
           }
         ]
       }) }}
