--- a/app/views/forms/housing/CBLperson1.html
+++ b/app/views/forms/housing/CBLperson1.html
@@ -53,11 +53,13 @@
           items: [
             {
               value: "yes",
-              text: "Yes"
+              text: "Yes",
+              checked: checked ("add-person2", "yes")
             },
             {
               value: "no",
-              text: "No"
+              text: "No",
+              checked: checked ("add-person2", "no")
             }
           ]
         }) }}
