--- a/app/views/forms/housing/CBLperson2.html
+++ b/app/views/forms/housing/CBLperson2.html
@@ -68,11 +68,13 @@
           items: [
             {
               value: "yes",
-              text: "Yes"
+              text: "Yes",
+              checked: checked ("add-person3", "yes")
             },
             {
               value: "no",
-              text: "No"
+              text: "No",
+              checked: checked ("add-person3", "no")
             }
           ]
         }) }}
