--- a/app/views/forms/housing/CBLrecourse.html
+++ b/app/views/forms/housing/CBLrecourse.html
@@ -32,15 +32,18 @@
         items: [
           {
             value: "yes",
-            text: "Yes"
+            text: "Yes",
+            checked: checked("is-recourse", "yes")
           },
           {
             value: "no",
-            text: "No"
+            text: "No",
+            checked: checked("is-recourse", "no")
           },
           {
             value: "I don't know",
-            text: "I don't know"
+            text: "I don't know",
+            checked: checked("is-recourse", "I don't know")
           }
         ]
       }) }}
