--- a/app/views/forms/housing/CBLimmigration.html
+++ b/app/views/forms/housing/CBLimmigration.html
@@ -19,8 +19,9 @@
 
         {% set detailsHtml %}
         {{ govukTextarea({
-          id: "details",
-          name: "details",
+          id: "immigration-details",
+          name: "immigration-details",
+          value: data['immigration-details'],
           label: {
             text: "Give details"
           }
@@ -43,13 +44,15 @@
             {
               value: "yes",
               text: "Yes",
+              checked: checked("immigration", "yes"),
               conditional: {
                 html: detailsHtml
               }
             },
             {
               value: "no",
-              text: "No"
+              text: "No",
+              checked: checked("immigration", "no")
             }
           ]
         }) }}
