--- a/app/views/forms/housing/CBLperson3.html
+++ b/app/views/forms/housing/CBLperson3.html
@@ -67,31 +67,17 @@
       }) }}
       <br><br>
       <form class="form" method="post">
-     
-        {% from "radios/macro.njk" import govukRadios %}
-
-        {{ govukRadios({
-          idPrefix: "add-person4",
-          name: "add-person4",
-          fieldset: {
-            legend: {
-              text: "Do you need to add another person?",
-              isPageHeading: true,
-              classes: "govuk-fieldset__legend--m"
-            }
-          },
-          items: [
-            {
-              value: "yes",
-              text: "Yes"
-            },
-            {
-              value: "no",
-              text: "No"
-            }
-          ]
-        }) }}
- 
+      <h2 class="govuk-heading-m">
+          Tell us about anyone else you didn't add yet (if applicable)
+      </h2>
+      {{ govukTextarea({
+        name: "more-people-to-add",
+        id: "more-people-to-add",
+        value: data['more-people-to-add'],
+        label: {
+          text: "Name, date of birth, gender, living with you now or not, relationship to you"
+        }
+      }) }}
 
       {% from "button/macro.njk" import govukButton %}
       <br>
